# nata

./: .gitmodules  CMakeLists.txt  Makefile.am  configure.ac  curses.cc  curses.h  dump.cc  folder.h  foldings.h  model.h  nested.h  painter.h  rows.h  signal.h  spans.h  stretches.h  test_foldings.cc  test_lines.cc  test_nested.cc  test_rows.h  test_signal.cc  test_spans.h  test_stretches.cc  test_text.cc  test_view.cc  test_view_foldings.cc  view.h  widget.h
examples/: CMakeLists.txt  Makefile.am  curses.cc  curses.xm  dump.cc  parse.cc  tree_sitter.h
include/nata/: creaser.h  curses.h  model.h  nested.h  painter.h  rows.h  spans.h  stretches.h  tokens.h  widget.h
ntvi/: CMakeLists.txt  lsp.xm  natavi.xm  ntvi.xm  syntax.xm  test.xm
syntax/bash/: colors  detect  query.scm
syntax/cpp/: colors  detect  query.scm
syntax/json/: colors  detect  query.scm
test/: CMakeLists.txt  Makefile.am  test_creaser.cc  test_creases.cc  test_folder.cc  test_foldings.cc  test_lines.cc  test_nested.cc  test_nested.h  test_painter.cc  test_rows.cc  test_rows.h  test_signal.cc  test_spans.h  test_stretches.cc  test_text.cc  test_tokens.cc  test_view.cc  test_view_foldings.cc  xemmai-search.xm  xemmai-text.xm  xemmai-tree-sitter.xm
vixm/: CMakeLists.txt  assist.xm  core.xm  lsp.xm  syntax.xm  test-change.xm  test-insert.xm  test-map.xm  test-motion.xm  test-others.xm  test-scroll.xm  test-search.xm  test.xm  testing.xm  utilities.xm  vi.xm
xemmai/: CMakeLists.txt  Makefile.am  cast.h  creaser.h  curses.cc  curses.h  curses.xm  folder.cc  folder.h  nata.cc  nata.h  painter.cc  painter.h  proxy.cc  proxy.h  search.cc  search.h  text.cc  text.h  tree_sitter.cc  tree_sitter.h  tree_sitter_json.cc  view.cc  view.h
