cmake_minimum_required(VERSION 3.16)
project(nata VERSION 202205)
find_package(jumoku 202102 REQUIRED)
find_package(Curses REQUIRED)
find_package(xemmai 202205 REQUIRED)
add_library(nata INTERFACE)
target_compile_features(nata INTERFACE cxx_std_17)
target_include_directories(nata INTERFACE include)
target_link_libraries(nata INTERFACE jumoku)
add_library(natacurses INTERFACE)
target_include_directories(natacurses INTERFACE ${CURSES_INCLUDE_DIRS})
target_compile_options(natacurses INTERFACE ${CURSES_CFLAGS})
target_link_libraries(natacurses INTERFACE nata ${CURSES_LIBRARIES})
add_subdirectory(xemmai)
enable_testing()
add_subdirectory(test)
add_subdirectory(examples)
install(TARGETS nata-xemmai DESTINATION lib/xemmai-${xemmai_VERSION_MAJOR})
install(TARGETS natacurses-xemmai DESTINATION lib/xemmai-${xemmai_VERSION_MAJOR})
