cmake_minimum_required(VERSION 3.16)
project(nata VERSION 202411)
find_package(jumoku 202306 REQUIRED)
find_package(Curses REQUIRED)
find_package(xemmai 202411 REQUIRED)
add_library(nata INTERFACE)
target_compile_features(nata INTERFACE cxx_std_20)
target_include_directories(nata INTERFACE include)
target_link_libraries(nata INTERFACE jumoku)
add_library(nata-curses INTERFACE)
target_include_directories(nata-curses INTERFACE ${CURSES_INCLUDE_DIRS})
target_compile_options(nata-curses INTERFACE ${CURSES_CFLAGS})
target_link_libraries(nata-curses INTERFACE nata ${CURSES_LIBRARIES})
set(TREE_SITTER ${PROJECT_SOURCE_DIR}/externals/tree-sitter)
add_subdirectory(xemmai)
enable_testing()
add_subdirectory(test)
add_subdirectory(examples)
add_subdirectory(vixm)
