AM_CPPFLAGS = -I$(top_srcdir)/.. -I.. $(NCURSES_CFLAGS)
AM_CXXFLAGS =
AM_LDFLAGS =
if DEBUG
AM_CXXFLAGS += -g
else
AM_CPPFLAGS += -DNDEBUG
AM_CXXFLAGS += -O3
endif
if PROFILE
AM_CXXFLAGS += -pg
AM_LDFLAGS += -pg
endif

AM_DEFAULT_SOURCE_EXT = .cc
noinst_PROGRAMS = dump curses
curses_LDADD = $(NCURSES_LIBS)
