function(add_module name)
	add_library(${name}-xemmai MODULE ${ARGN})
	target_link_libraries(${name}-xemmai PRIVATE ${name} xemmai)
	set_target_properties(${name}-xemmai PROPERTIES OUTPUT_NAME ${name} PREFIX "")
	install(TARGETS ${name}-xemmai DESTINATION lib/xemmai-${xemmai_VERSION_MAJOR})
endfunction()
add_module(nata proxy.cc text.cc search.cc nata.cc)
add_module(natacurses curses.cc)
