function(add_module name)
	add_library(${name}-xemmai MODULE ${ARGN})
	target_link_libraries(${name}-xemmai PRIVATE ${name} xemmai)
	set_target_properties(${name}-xemmai PROPERTIES OUTPUT_NAME ${name} PREFIX "")
	install(TARGETS ${name}-xemmai DESTINATION lib/xemmai-${xemmai_VERSION_MAJOR})
endfunction()
add_module(nata proxy.cc text.cc search.cc nata.cc)
add_module(nata-curses curses.cc)
add_library(nata-tree-sitter INTERFACE)
target_include_directories(nata-tree-sitter INTERFACE ${TREE_SITTER}/lib/include)
target_link_libraries(nata-tree-sitter INTERFACE nata)
add_module(nata-tree-sitter tree_sitter.cc ${TREE_SITTER}/lib/src/lib.c)
function(add_tree_sitter_language name)
	add_library(nata-tree-sitter-${name}-xemmai MODULE tree_sitter_${name}.cc ${TREE_SITTER}-${name}/src/parser.c)
	target_link_libraries(nata-tree-sitter-${name}-xemmai PRIVATE nata-tree-sitter xemmai)
	set_target_properties(nata-tree-sitter-${name}-xemmai PROPERTIES OUTPUT_NAME nata-tree-sitter-${name} PREFIX "")
	install(TARGETS nata-tree-sitter-${name}-xemmai DESTINATION lib/xemmai-${xemmai_VERSION_MAJOR})
endfunction()
add_tree_sitter_language(json)
